--- a/.project
+++ b/.project
@@ -28,4 +28,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>guava-master</name>
+			<type>2</type>
+			<location>C:/Users/rizab/Downloads/guava-master</location>
+		</link>
+	</linkedResources>
 </projectDescription>
